--- a/Views/Map/Index.cshtml
+++ b/Views/Map/Index.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Mapping";
+    ViewData["Title"] = "Map";
 }
 <h2>@ViewData["Title"]</h2>
 <!-- <p>@ViewData["Message"]</p> -->
@@ -23,8 +23,8 @@
 }
 
 <div class="form-group col-md-4">
-    <label>UserName:</label>
-    <input type="text" id="userName" class="form-control" />
+    <label>Airport Name:</label>
+    <input type="text" id="airportName" class="form-control" />
 <input type="button" id="btnsubmit" value="Search" class="btn btn-default"/>
 </div>
 <div id="peta"></div>
@@ -34,7 +34,7 @@
     <script type="text/javascript">
            
         $(document).ready(function(){
-                var mymap = L.map('peta').locate({setView:true, maxZoom:20});
+                var mymap = L.map('peta').locate({setView:true, maxZoom:5});
                 L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
                     maxZoom: 18,
                     attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
@@ -59,24 +59,25 @@
 
                     for (let index = 0; index < data.length; index++) {
                         const element = data[index];
+                        
                         console.log(element);
-                        var marker = L.marker([element.fLatitude, element.fLongitude], { title: element.fullName +" on " +element.fTime}).addTo(mymap);
-                        marker.bindPopup(element.fullName +"("+element.userName+")" +" on " +element.fTime).openPopup();
+
+                        var marker = L.marker([element.latitude, element.longitude], { title: element.name +" - " +element.code}).addTo(mymap);
+                        marker.bindPopup(element.name +"("+element.code+")").openPopup();
                         markers.push(marker);
-                        polyLines.push([element.fLatitude, element.fLongitude]);
+                        polyLines.push([element.latitude, element.longitude]);
 
                         if(index===0){
-                            mymap.center = [element.fLatitude, element.fLongitude];// (center: [element.fLatitude, element.fLongitude], zoom:13);
+                            mymap.center = [element.latitude, element.longitude];// (center: [element.fLatitude, element.fLongitude], zoom:13);
                         }
                     }
-                  var polyline=  L.polyline(polyLines, {color:'red'}).addTo(mymap);
-                    mymap.fitBounds(polyline.getBounds());
+                  
                 }
 
                 $('#btnsubmit').click(function(e){
-                    var userName= $('#userName').val();
+                    var airportname= $('#airportName').val();
                     $.ajax({
-                        url:'/home/coordinate?userName='+userName,
+                        url:'/map/search?name='+airportname,
                         method:'GET',
                         success: function(d){
                             console.log(d);
