re-populate markers on map after new search

--- a/Views/Map/Index.cshtml
+++ b/Views/Map/Index.cshtml
@@ -42,21 +42,16 @@
                         'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
                     id: 'mapbox.streets'
                 }).addTo(mymap);
-               
-                // var polygon = L.polygon([
-                //     [51.509, -0.08],
-                //     [51.503, -0.06],
-                //     [51.51, -0.047]
-                // ]).addTo(mymap);
+
                 var markers = [];
                 var polyLines = [];
                 function Mapping(data){
-                    console.log(markers.length);
+
                     for(let idx=0; idx < markers.length; idx++){
                         markers[idx].removeFrom(mymap);
-                        markers.pop();
                     } 
 
+                    markers = [];
                     for (let index = 0; index < data.length; index++) {
                         const element = data[index];
                         
